--- a/slides/links_monitors/links.tex
+++ b/slides/links_monitors/links.tex
@@ -1,8 +1,8 @@
-\documentclass{../ucll-slides}
+\documentclass{ucll-slides}
 \usepackage{pxfonts}
 \usepackage{tikz}
 \usepackage{calc}
-\usepackage{../ucll-code}
+\usepackage{ucll-code}
 
 
 \usetikzlibrary{calc,shadows,tikzmark}
