cleaned up intro

--- a/slides/intro/intro.tex
+++ b/slides/intro/intro.tex
@@ -20,32 +20,33 @@
 
 \begin{frame}
     \frametitle{Who we are}
-    Wannes Fransen
-
-    Frédéric Vogels
+    \begin{center} \large
+        Wannes Fransen \\[4mm]
+        Frédéric Vogels
+    \end{center}
 \end{frame}
 
 \begin{frame}
     \frametitle{Classes - contacturen}
-    12 x 2 hours = 24hrs 
-
-    3stp $=>$ 3 x 25-30hrs $=>$ 75-90 hours 
+    \begin{itemize}
+        \item 12 $\times$ 2 hours = 24hrs 
+        \item 3stp $\Rightarrow$ 3 $\times$ 25--30hrs $\Rightarrow$ 75--90 hours 
+    \end{itemize}
 \end{frame}
 
 \begin{frame}
     \frametitle{Evaluation}
-    Exam + project
-
-    project: 
+    \structure{Project}
     \begin{itemize}
         \item Part 1 : 4/20 (PE with feedback)
         \item Part 2 : 6/20 (PE with feedback)
         \item Part 3 : 8/20 
     \end{itemize}
-
-    Oral exam:
-
-    You can score -8, up to +2 points on the exam.
+    \vskip4mm
+    \structure{Oral exam}
+    \begin{itemize}
+        \item You can score -8, up to +2 points on the exam.
+    \end{itemize}
 \end{frame}
 
 \begin{frame}
