--- a/slides/links-monitors/aux-linked.tex
+++ b/slides/links-monitors/aux-linked.tex
@@ -5,56 +5,50 @@
 \begin{frame}
     \frametitle{2 processes (\texttt{\&spawn\_link/1})}
     \begin{center}
-        \begin{tikzpicture}[roundnode/.style={circle, draw=green!60, fill=green!5, very thick, minimum size=7mm}]
-            %Nodes
-            \node[roundnode]   (processA)                {A};
-            \node[roundnode]   (processB)  [right=of processA]    {B};
-            \draw[->] (processA.east) -- (processB.west);
+        \begin{tikzpicture}
+            \coordinate (process A position) at (0,0);
+            \coordinate (process B position) at (2,0);
+
+            \only<1-3>{
+                \node[process] (process A) at (process A position) {A};
+            }
+            \only<4>{
+                \node[dead process] (process A) at (process A position) {A};
+            }
+
+            \only<1-2>{
+                \node[process] (process B) at (process B position) {B};
+            }
+            \only<3-4>{
+                \node[dead process] (process B) at (process B position) {B};
+            }
+
+            \draw[-latex] (process A) -- (process B);
         \end{tikzpicture}
     \end{center}
-    Process A initiates link 
-    \vfill
-    (As process A:) \texttt{ProcessB |> Process.whereis |> Process.link}
-\end{frame}
+    \vskip5mm
+    \begin{overprint}
+        \onslide<1>
+        \begin{center}
+            Process A initiates link
+        \end{center}
+        \vskip4mm
+        \code[language=elixir,font=\small,width=.95\linewidth]{linking.exs}
 
-\begin{frame}
-    \frametitle{2 processes (\&spawn\_link/1)}
-    \begin{center}
-        \begin{tikzpicture}[roundnode/.style={circle, draw=green!60, fill=green!5, very thick, minimum size=7mm}]
-            %Nodes
-            \node[roundnode]   (processA)                {A};
-            \node[roundnode]   (processB)  [right=of processA]    {B};
-            \draw[<->] (processA.east) -- (processB.west);
-        \end{tikzpicture}
-    \end{center}
-    Processes are linked \textbf{bidirectionally}
-\end{frame}
+        \onslide<2>
+        \begin{center}
+            Processes are now linked \textbf{bidirectionally}
+        \end{center}
 
-\begin{frame}
-    \frametitle{2 processes (\&spawn\_link/1)}
-    \begin{center}
-        \begin{tikzpicture}[roundnode/.style={circle, draw=green!60, fill=green!5, very thick, minimum size=7mm}]
-            \node[roundnode]   (processA)                {A};
-            \node[cross out, draw]   (processB)  [right=of processA]    {B};
-            \draw[<->] (processA.east) -- (processB.west);
-        \end{tikzpicture}
-    \end{center}
+        \onslide<3>
+        \begin{center}
+            Process B dies
+        \end{center}
 
-    Process B dies
-\end{frame}
-
-\begin{frame}
-    \frametitle{2 processes (\&spawn\_link/1)}
-    \begin{center}
-        \begin{tikzpicture}[roundnode/.style={circle, draw=green!60, fill=green!5, very thick, minimum size=7mm}]
-            \node[cross out, draw]   (processA)                {A};
-            \node[cross out, draw]   (processB)  [right=of processA]    {B};
-            \draw[<->] (processA.east) -- (processB.west);
-        \end{tikzpicture}
-    \end{center}
-
-    Process A receives a "death message", and if it is not a system process, no custom behaviour can be implemented when this message is received.
-    \vfill
-    \textit{Note: Even if it is a system process, the end result should also be death. 
-    This is often used when you want to do certain actions, such as cleaning up your process.}
+        \onslide<4>
+        Process A receives a ''death message``, and if it is not a system process, no custom behaviour can be implemented when this message is received.
+        \vfill
+        \textit{Note: Even if it is a system process, the end result should also be death.
+        This is often used when you want to do certain actions, such as cleaning up your process.}
+    \end{overprint}
 \end{frame}
