--- a/slides/links-monitors/links.tex
+++ b/slides/links-monitors/links.tex
@@ -7,20 +7,22 @@
 
 \usetikzlibrary{calc,shadows,tikzmark}
 \usetikzlibrary{positioning}
-\usetikzlibrary{shapes,snakes} 
+\usetikzlibrary{shapes,snakes}
 
 \coursename{Distributed Applications}
 \title{links and monitors}
 
+\tikzset{
+    process/.style={circle, draw=green!60, fill=green!12, very thick, minimum size=7mm},
+    dead process/.style={draw,cross out}
+}
 
 \begin{document}
 
 \maketitle
 
-\input{aux-unlinked.tex}
+% \input{aux-unlinked.tex}
 % \input{aux-linked.tex}
-% \input{aux-monitors.tex}
-
-
+\input{aux-monitors.tex}
 
 \end{document}
