slides/links-monitors

--- a/slides/links-monitors/links.tex
+++ b/slides/links-monitors/links.tex
@@ -5,9 +5,7 @@
 \usepackage{ucll-code}
 
 
-\usetikzlibrary{calc,shadows,tikzmark}
-\usetikzlibrary{positioning}
-\usetikzlibrary{shapes,snakes}
+\usetikzlibrary{calc}
 
 \coursename{Distributed Applications}
 \title{links and monitors}
