slides/links-monitors

--- a/slides/links-monitors/links.tex
+++ b/slides/links-monitors/links.tex
@@ -19,8 +19,8 @@
 
 \maketitle
 
-% \input{aux-unlinked.tex}
-% \input{aux-linked.tex}
+\input{aux-unlinked.tex}
+\input{aux-linked.tex}
 \input{aux-monitors.tex}
 
 \end{document}
