fixed processes slides

--- a/slides/processes/processes.tex
+++ b/slides/processes/processes.tex
@@ -6,6 +6,7 @@
 
 
 \usetikzlibrary{calc,shadows,tikzmark}
+\beamertemplatenavigationsymbolsempty
 
 \coursename{Distributed Applications}
 \title{Processes}
