--- a/slides/processes/aux-os-refresher.tex
+++ b/slides/processes/aux-os-refresher.tex
@@ -5,7 +5,8 @@
 \begin{frame}
     \frametitle{Operating Systems Refresher}
     \begin{center}
-        \begin{tikzpicture}[os/.style={draw,drop shadow,fill=blue!50},
+        \begin{tikzpicture}[scale=0.8,transform shape,
+                            os/.style={draw,drop shadow,fill=blue!50},
                             process/.style={draw,drop shadow,fill=red!50},
                             process header/.style={font=\sc\bf\Large,red,opacity=0.5},
                             hardware/.style={drop shadow,fill=magenta!50},
@@ -14,6 +15,7 @@
             \coordinate (process a) at ($ (os.south west) + (0,-0.2) $);
             \coordinate (process b) at ($ (os.south west) ! 0.35 ! (os.south east) + (0,-0.2) $);
             \coordinate (process c) at ($ (os.south west) ! 0.7 ! (os.south east) + (0,-0.2) $);
+            \path[use as bounding box] (os.north west) rectangle (5,-7);
             \draw[process] (process a) rectangle ++(3,-4);
             \draw[process] (process b) rectangle ++(3,-4);
             \draw[process] (process c) rectangle ++(3,-4);
